--- a/templates/static/eventos/css/meuseventos.css
+++ b/templates/static/eventos/css/meuseventos.css
@@ -15,3 +15,7 @@
 .modal-backdrop.show {
     display: none;
 }
+
+.h5, h5{
+    margin-top: 20px;
+}
